--- a/tools/ci_build/github/azure-pipelines/win-gpu-tensorrt-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/win-gpu-tensorrt-ci-pipeline.yml
@@ -27,9 +27,7 @@ jobs:
     buildArch: x64
     BuildConfig: 'RelWithDebInfo'
     skipComponentGovernanceDetection: true
-    ORT_CACHE_DIR: $(Agent.TempDirectory)/ort_ccache
     TODAY: $[format('{0:dd}{0:MM}{0:yyyy}', pipeline.startTime)]
-    MSBUILD_CACHE_ARG: '/p:CLToolExe=cl.exe /p:CLToolPath=C:\ProgramData\chocolatey\bin /p:TrackFileAccess=false /p:UseMultiToolTask=true /p:DebugInformationFormat=OldStyle'
   timeoutInMinutes: 150
   workspace:
     clean: all
@@ -50,28 +48,11 @@ jobs:
       Today: $(TODAY)
       CacheDir: $(ORT_CACHE_DIR)
       AdditionalKey: "gpu-reduced-ops | $(BuildConfig)"
-      BuildSteps:
-        - task: PythonScript@0
-          displayName: 'Generate cmake config'
-          inputs:
-            scriptPath: '$(Build.SourcesDirectory)\tools\ci_build\build.py'
-            arguments: '--config $(BuildConfig) --build_dir $(Build.BinariesDirectory) --skip_submodule_sync --build_shared_lib --update --cmake_generator "Visual Studio 17 2022" --build_wheel --enable_onnx_tests --use_tensorrt --tensorrt_home="C:\local\TensorRT-8.6.1.6.Windows10.x86_64.cuda-11.8" --cuda_version=11.8 --cuda_home="$(Agent.TempDirectory)\v11.8" --cmake_extra_defines CMAKE_CUDA_ARCHITECTURES=75 --use_cache'
-            workingDirectory: '$(Build.BinariesDirectory)'
-
-        - task: VSBuild@1
-          displayName: 'Build'
-          inputs:
-            solution: '$(Build.BinariesDirectory)\$(BuildConfig)\onnxruntime.sln'
-            platform: 'x64'
-            configuration: $(BuildConfig)
-            msbuildArgs: "$(MsbuildArguments) $(MSBUILD_CACHE_ARG)"
-            msbuildArchitecture: $(buildArch)
-            maximumCpuCount: true
-            logProjectEvents: false
-            workingFolder: '$(Build.BinariesDirectory)\$(BuildConfig)'
-            createLogFile: true
-          env:
-            CCACHE_DIR: $(ORT_CACHE_DIR)
+      BuildPyArguments: '--config $(BuildConfig) --build_dir $(Build.BinariesDirectory) --skip_submodule_sync --build_shared_lib --update --cmake_generator "Visual Studio 17 2022" --build_wheel --enable_onnx_tests --use_tensorrt --tensorrt_home="C:\local\TensorRT-8.6.1.6.Windows10.x86_64.cuda-11.8" --cuda_version=11.8 --cuda_home="$(Agent.TempDirectory)\v11.8" --cmake_extra_defines CMAKE_CUDA_ARCHITECTURES=75'
+      MsbuildArguments: $(MsbuildArguments)
+      BuildArch: $(buildArch)
+      Platform: 'x64'
+      BuildConfig: $(BuildConfig)
 
   - task: PythonScript@0
     displayName: 'Build wheel'
