--- a/tools/ci_build/github/azure-pipelines/templates/jobs/win-ci-build-steps.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/jobs/win-ci-build-steps.yml
@@ -51,7 +51,7 @@ steps:
           key: ' "$(TODAY)" | ${{parameters.AdditionalKey}} | merge '
         ${{else}}:
           key: '"$(TODAY)" | onnxruntime | ${{parameters.AdditionalKey}} | $(Build.SourceVersion) '
-        path: $(ORT_CACHE_DIR)
+        path: ${{parameters.CacheDir}}
         restoreKeys: |
           "$(TODAY)" | onnxruntime | ${{parameters.AdditionalKey}}
       displayName: Cache Task
