--- a/tools/ci_build/github/azure-pipelines/templates/clean-agent-build-directory-step.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/clean-agent-build-directory-step.yml
@@ -17,7 +17,7 @@ steps:
   displayName: 'Clean Agent Directories'
   condition: always()
 
-- script: docker image prune -f
+- script: which docker && docker image prune -f
   displayName: Clean docker images
   condition: eq(variables['Agent.OS'], 'Linux')
   continueOnError: true
