--- a/tools/ci_build/github/azure-pipelines/linux-cpu-minimal-build-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-cpu-minimal-build-ci-pipeline.yml
@@ -247,11 +247,9 @@ jobs:
               --parallel \
               --skip_tests \
               --disable_ml_ops \
+              --disable_types sparsetensor float8 float16 optioal \
               --include_ops_by_config /home/onnxruntimedev/.test_data/include_no_operators.config \
-              --cmake_extra_defines onnxruntime_DISABLE_SPARSE_TENSORS=ON \
-                                    onnxruntime_DISABLE_FLOAT8_TYPES=ON \
-                                    onnxruntime_DISABLE_OPTIONAL_TYPE=ON \
-                                    onnxruntime_BUILD_UNIT_TESTS=OFF
+              --cmake_extra_defines onnxruntime_BUILD_UNIT_TESTS=OFF
       workingDirectory: $(Build.SourcesDirectory)
 
   - task: CmdLine@2
