--- a/.github/workflows/publish-js-apidocs.yml
+++ b/.github/workflows/publish-js-apidocs.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - js/**
+      - js/common/**
   schedule:
     - cron: '0 0 1 * *'
   workflow_dispatch:
