--- a/js/node/CMakeLists.txt
+++ b/js/node/CMakeLists.txt
@@ -28,6 +28,8 @@ endif()
 # include dirs
 include_directories(${CMAKE_JS_INC})
 include_directories(${CMAKE_SOURCE_DIR}/../../include/onnxruntime/core/session)
+include_directories(${CMAKE_SOURCE_DIR}/../../include/onnxruntime)
+include_directories(${CMAKE_SOURCE_DIR}/../../onnxruntime)
 include_directories(${CMAKE_SOURCE_DIR}/node_modules/node-addon-api)
 
 # optional providers
