add build training artifact option to web ci pipeline + added the web artifacts to the pull wasm artifacts script

--- a/tools/ci_build/github/azure-pipelines/templates/web-ci.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/web-ci.yml
@@ -23,6 +23,10 @@ parameters:
   displayName: 'Build JSEP'
   type: boolean
   default: true
+- name: BuildTraining
+  displayName: 'Build training'
+  type: boolean
+  default: true
 
 - name: WASMTemplate
   type: string
