--- a/tools/ci_build/github/azure-pipelines/android-arm64-v8a-QNN-crosscompile-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/android-arm64-v8a-QNN-crosscompile-ci-pipeline.yml
@@ -11,6 +11,7 @@ trigger:
     - CONTRIBUTING.md
     - BUILD.md
     - 'js/web'
+    - 'js/node'
     - 'onnxruntime/core/providers/js'
 pr:
   branches:
@@ -24,6 +25,7 @@ pr:
     - CONTRIBUTING.md
     - BUILD.md
     - 'js/web'
+    - 'js/node'
     - 'onnxruntime/core/providers/js'
 #### end trigger ####
 
