--- a/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_cuda11_8_tensorrt8_6
+++ b/tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_cuda11_8_tensorrt8_6
@@ -165,14 +165,6 @@ CMD ["/bin/bash"]
 
 #Build manylinux2014 docker image end
 
-#Install ccache
-RUN mkdir -p /tmp/ccache && \
-    cd /tmp/ccache && \
-    yum install wget -y && \
-    wget -q -O - https://github.com/ccache/ccache/releases/download/v4.7.4/ccache-4.7.4-linux-x86_64.tar.xz | tar --strip 1 -J -xf - && \
-    cp /tmp/ccache/ccache /usr/bin && \
-    rm -rf /tmp/ccache
-
 #Install TensorRT 8.6.1.6
 #RUN yum install -y wget
 RUN v="8.6.1.6-1.cuda11.8" &&\
@@ -182,7 +174,7 @@ RUN v="8.6.1.6-1.cuda11.8" &&\
 
 #Add our own dependencies
 ADD scripts /tmp/scripts
-RUN cd /tmp/scripts && /tmp/scripts/manylinux/install_centos.sh && /tmp/scripts/manylinux/install_deps.sh && rm -rf /tmp/scripts
+RUN cd /tmp/scripts && /tmp/scripts/manylinux/install_centos.sh && /tmp/scripts/manylinux/install_deps.sh && /tmp/scripts/manylinux/install_shared_deps.sh rm -rf /tmp/scripts
 
 ARG BUILD_UID=1001
 ARG BUILD_USER=onnxruntimedev
